# protnote_gnn

./: README.md  WORKFLOW_CHECKLIST.md  environment.yml  pyproject.toml  train_command.md
.github/workflows/: codeql.yml
configs/: base_config.yaml  config.yaml
configs/encoder/: structural.yaml
configs/encoder/proteinfer/: default.yaml
configs/params/: default.yaml
configs/paths/: default.yaml
configs/remote/: default.yaml
docs/: data_guide.md  training_guide.md
protnote/data/: collators.py  datasets.py  samplers.py  structural_datasets.py
protnote/models/: ProtNote.py  ProtNoteTrainer.py  __init__.py  egnn.py
protnote/utils/: configs.py  data.py  graph_archive.py  interpretability.py  main_utils.py  models.py  network.py  structure.py  structure_graph.py
