[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protnote"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "wget==3.2",
    "hydra-core>=1.3,<2",
    "omegaconf>=2.3,<3",
    "obonet==1.0.0",
    "blosum==2.0.2",
    "biopython==1.84",
]

[project.optional-dependencies]
ml = [
    "tables==3.8.0",
    "torchmetrics==1.4.0",
    "torcheval==0.0.7",
    "tensorboard==2.16.2",
    "torchdata==0.8.0",
    "transformers==4.40.0",
    "wandb==0.15.11",
    "sacremoses==0.0.53",
    "pynvml==11.5.0",
    "azureml-mlflow==1.53.0",
    "loralib==0.1.2",
    "umap-learn==0.5.4",
    "atomworks[ml,openbabel]>=2.2.0,<3",
    "esm @ git+https://github.com/KagurazakaHinagi/esm.git",
]

[tool.hatch.build.targets.wheel]
packages = ["protnote"]

[tool.hatch.build.targets.sdist]
include = [
    "protnote",
    "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 140
ignore = ["F841", "F401", "E712"]

# --- Pixi workspace ---

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
channel-priority = "disabled"

# Core conda deps shared by all environments (no GPU required)
[tool.pixi.dependencies]
numpy = "<2.0"
pandas = ">=2.3.3,<3"
scipy = "1.13.1.*"
scikit-learn = "1.5.0.*"
matplotlib = "3.9.*"
seaborn = "0.13.2.*"
ipykernel = "6.29.5.*"
joblib = "1.2.0.*"
httpx = ">=0.28.1,<0.29"

[tool.pixi.pypi-dependencies]
protnote = { path = ".", editable = true }

# Linux-specific system libraries
[tool.pixi.target.linux-64.dependencies]
libstdcxx-ng = ">=15.2.0,<16"
libgcc-ng = ">=15.2.0,<16"

[tool.pixi.target.linux-64.activation.env]
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib"

# --- GPU feature (training & inference) ---

[tool.pixi.feature.ml]
platforms = ["linux-64"]
channels = ["pytorch", "nvidia", "pyg"]

[tool.pixi.feature.ml.dependencies]
cuda-version = "11.8.*"
pytorch-gpu = "2.4.0.*"
torchvision = "0.19.0.*"
torch-scatter = ">=2.1.1,<3"
torch-geometric = ">=2.6.1,<3"

[tool.pixi.feature.ml.system-requirements]
cuda = "11.8"

# --- Util Tasks ---

[tool.pixi.tasks]
dataprep = "python bin/data_helper.py download"

# --- Environments ---

[tool.pixi.environments]
default = { features = ["ml"], solve-group = "ml" }
dataprep = { features = [], solve-group = "dataprep" }
